fix ShiftPlan attributes in backend